# intro-robo

./: .gitignore  build.sh  init.sh
remotecontrol/: .cproject  .project  .remotecontrol.g_c  .remotecontrol.g_x  ProcessorExpert.pe  ProcessorExpert.pe.template  ProjectInfo.xml
remotecontrol/Documentation/: remotecontrol.txt  remotecontrol_SIGNALS.txt  remotecontrol_Settings.xml
remotecontrol/Sources/: Events.c  Events.h  Platform_local.h  RealMain.cpp  RealMain.h  RemoteControlConsole.cpp  RemoteControlConsole.h  main.c
remotecontrol/doxy/: remotecontrol.doxyfile
robo/: .cproject  .project  .robo.g_c  .robo.g_x  ProcessorExpert.pe  ProcessorExpert.pe.template  ProjectInfo.xml
robocommon/: .cproject  .project  Accel.cpp  Accel.h  Assert.cpp  Assert.h  AutoArgsCommand.h  BehaviourMachine.h  Buzzer.cpp  Buzzer.h  CdcIOStream.h  CharBit.h  CircularBuffer.h  CommandParser.h  CommonTraits.h  Console.h  ConsoleHelpers.cpp  ConsoleHelpers.h  CriticalSection.h  Debounce.cpp  Debounce.h  Drive.cpp  Drive.h  Event.cpp  Event.h  EventHandler.h  EventQueue.h  FixedSizeString.h  GlobalInitHelper.h  HistoryController.h  IOStream.h  KeyDebounce.cpp  KeyDebounce.h  Keys.cpp  Keys.h  LED.c  LED.h  LegacyArgsCommand.h  LineEndingNormalizerIOStream.h  LineInputStrategy.h  (+45 more)
unittests/: CMakeLists.txt
unittests/src/: BehaviourMachine.cpp  CircularBuffer.cpp  CommandParser.cpp  Console.cpp  EventHandler.cpp  EventQueue.cpp  HistoryController.cpp  IOStream.cpp  LineInputStrategy.cpp  NumberConversion.cpp  Optional.cpp  String.cpp  StringStreamer.h  TestAssert.h
(+28 files in other folders)
